# function-words

./: .gitignore  README.md  pyproject.toml  setup.py
functionwords/: base.py
src/: WAW.py  base.py
