[tool.poetry]
name = "function-words"
version = "0.0.1"
description = "Better curated Chinese and English function words."
authors = ["Haining Wang"]
license = "MIT License"

packages = [
    { include = "src" },
    { include = "src/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
