[tool.poetry]
name = "functionwords"
version = "0.0.2"
description = "Better curated Chinese and English function words."
authors = ["Haining Wang <hw56@indiana.edu>"]
license = "MIT License"

packages = [
    { include = "src" },
    { include = "src/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
